# icwsm2024

./: .gitignore  Dockerfile  README.md  pyproject.toml
aaai2023/: enumerate.py  main.py  run.py
aaai2023/classifiers/: huggingface.py  perspective.py
aaai2023/classifiers/scripts/: finetune_full.py  run_perspective.py  train_tfidf.py
aaai2023/datasets/: __init__.py  classifier.py  hatespeech.py  quantifier.py
aaai2023/datasets/scripts/: prepare_raw.py  subsample_hate_data.py
aaai2023/models/: bcc.py  mcmc.py
aaai2023/paper/: clf_perf.py  compare_quantification_methods.py  experiment_configurations.py  experiments.py  fewer_samples.py  low_prevalence.py  n_sample_plots.py  names.py  out_of_domain.py  plot_all.py  plot_utils.py  quant_method_boxplots.py  sampling_fails.py  subsampling_plots.py  util.py
aaai2023/paper/templates/: perf_table.tex
aaai2023/scripts/: experiments.py
bash/: experiments.sh
config/: config.dev.json
data/raw/davidson/: davidson.bib  download.sh
data/raw/dynamically_generated_hate/: download.sh
data/raw/ethos/: download.sh  ethos.bib
icwsm2024/: enumerate.py  main.py  run.py
icwsm2024/classifiers/: huggingface.py  perspective.py  svm_perf.py
icwsm2024/datasets/: __init__.py  hatespeech.py  quantifier.py
icwsm2024/models/: __init__.py  bcc.py
icwsm2024/paper/: calibration_methods.py  clf_perf.py  compare_quantification_methods.py  experiment_configurations.py  experiments.py  fewer_samples.py  low_prevalence.py  names.py  out_of_domain.py  plot_all.py  plot_utils.py  sampling_fails.py  util.py
(+46 files in other folders)
