[tool.poetry]
name = "aaai2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.10"
numpy = "^1.25.1"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
torch = ">=2.0.0, !=2.0.1"
transformers = {extras = ["torch"], version = "^4.31.0"}
jax = "^0.4.14"
jaxlib = "^0.4.14"
numpyro = "^0.12.1"
matplotlib = "^3.7.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
